Working on sidbar - 01

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 
     <h1>This is git</h1>
-    
+
+    <aside>
+
+        <h1>Sidbar header</h1>
+
+
+    </aside>
+
+
 </body>
 </html>                         
