--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
         <h1>Sidbar header</h1>
 
+        <ul>
+            <li>Item 1</li>
+            <li>Item 1</li>
+            <li>Item 1</li>
+            <li>Item 1</li>
+        </ul>
 
     </aside>
 
